__**Update 4.5**__
- changes to `AMP_server_cog.py`
    - relocated and renamed methods to better facilate redability
- changes to `whitelist_cog.py`
    - added validation of `Whitelist_request_channel` when enabling auto-whitelist. Should warn if channel doesn't exists and or not set.
- added extensive documentation to `amp_template.py`
    - added required methods and notes to indicate this.

__**HotFix 4.4.9**__
- changed default `DBBanner` blur amount to `0`
- fixed issue in `on_command_error`
- Updated `banner_creator.py`
    - fixed issue with `banner_creator.py` raising an issue about `_font_Whitelist_y` not existing. Thanks @IceOfWraith#6057
    - changed resolution of Banners in `banner_creator.py` from `1800x600` to `800x270`
        - changed `self._font_default_size` from 25 to 12
    - fixed issue with `word_wrap` not handling text without a blank space. Too long of Instance Names will show like this `InstaceN...` or similar depending on length.
- fixed issue with `/server banner settings` Modal/View

__**Update 4.4.8**__
- added `Donator` role bypass for Auto whitelist wait time.
    - added `/whitelist donator_bypass` command.

__**Update 4.4.7**__
- fixed issue with `whitelist_request_handler()` when attempting to use a non unique IGN. Thanks @Snaggolicious#4987
- split `AMP.py` class's into seperate files for future ease of usage/editing.
    - Updated any related `AMP.py` calls and any type checking related to `AMPInstance, AMPHandler` and `AMPConsole`
- fixed logic on `/bot permissions` command
- updated info on `/bot utils clear` command
- cleaned up formatting of `bot_utils_sync` method
- updated the layout of `bot_settings_embed` inside `utils_embeds.py` which will provide a cleaner display for `/bot settings` command
- fixed issue with donator flag not updating on banners. Thanks @FeminalPanda#7879
    - updated `commands.md` to reflect the changes.
- began making `sub_group_handler` for adding commands to an existing command group.