@@ -3,8 +3,13 @@ __**Update 4.5**__
     - relocated and renamed methods to better facilate redability
 - changes to `whitelist_cog.py`
     - added validation of `Whitelist_request_channel` when enabling auto-whitelist. Should warn if channel doesn't exists and or not set.
+- relocated `getWhitelist` to `amp_minecraft.py`, there is a generic method inside of `AMP.py` for linters.
 - added extensive documentation to `amp_template.py`
     - added required methods and notes to indicate this.
+- Updated `loader.py`
+    - Revamped the entire `cog_auto_loader` to better handle cogs that rely on other cogs.
+    - Cogs will now require a `Dependencies` var at the top of their files and will use a list to define any required cogs they need to load. If the cog has no dependency set it to `None`
+        - See `cog_template.py` for examples if needed.
 
 __**HotFix 4.4.9**__
 - changed default `DBBanner` blur amount to `0`
